# pysatCDF

./: .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  Installation-Windows_v_1.0.txt  LICENSE  MANIFEST.in  README.md  build.sh  meta-pysatCDF.yaml  meta.yaml  pysatCDF Installation Instructions - Windows_v_1.0  requirements.txt  setup.cfg  setup.py  setup_test.py  test_requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  main.yml  pysat_rc.yml
cdf36_1-dist/: CDF_copyright.txt  CHANGES.txt  HOWTO.run_previous_version  Makefile  Note.1st  README.install  Release.notes  Welcome.txt  checkleapseconds.sh
cdf36_1-dist/cdfjava/: JavaAPIs.txt
cdf36_1-dist/samples/: OperateVariables.c  cacsst2.cdf  d103a2x.cdf  geocpi0.skt  read_example1.c
cdf36_3-dist/: CHANGES.txt  HOWTO.run-Java-tools  Help.all  Makefile  Note.gcc  Note.linux  Note.macosx  README.after_install  README.install_java_APIs  Release.notes  Welcome.txt  modify_definition_files.sh
cdf36_3-dist/samples/: OperateAttributes.c  OperateCDF.c  d103a2x.cdf  example1.cdf  ij01r39.cdf
cdf38_1-dist/: CHANGES.txt  HOWTO.run-Java-tools  HOWTO.run-cdf-json-tools  HOWTO.run-cdf-xml-tools  HOWTO.run_previous_version  Help.all  Help.install  Help.test  Makefile  Note.1st  Note.intel  Note.linux  Note.macosx  Note.noCC  Note.solaris  README.after_install  README.install  README.install_java_APIs  README_cdf_tools.txt  Release.notes  Welcome.txt  checkleapseconds.sh  modify_definition_files.sh
cdf38_1-dist/cdfjava/: JavaAPIs.txt
cdf38_1-dist/samples/: cacsst2.skt  example1.c  example1.cdf  example2.cdf  example2.f  (+3 more)
pysatCDF/: CONTRIBUTING.md  __init__.py  _cdf.py  cdf.py  fortran_cdf.f
(+422 files in other folders)
