[metadata]
name = pysatCDF
version = file: pysatCDF/version.txt
url = https://github.com/pysat/pysatCDF
author = Russell A. Stoneback, et al.
author_email = pysat.developers@gmail.com
description = 'Simple NASA Common Data Format (CDF) File reader.'
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
keywords =
    CDF
    NASA
    pysat
    pandas
license_file = LICENSE

[options]
python_requires = >= 3.5
setup_requires = setuptools >= 38.6; pip >= 10
packages = pysatCDF
include_package_data = True
zip_safe = False
install_requires = numpy
		   pandas
		   pysat
		   xarray

[options.package_data]
* = *.txt

[coverage:run]

[coverage:report]

[flake8]
max-line-length = 80
ignore =
  D200
  D202
  W503
  pysatCDF/__init__.py F401

exclude = conf.py
  tests
  __init__.py

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    load_options: tests for instruments including optional load kwargs
    first: first tests to run
    second: second tests to run
